changed height to min-height to avoid clipping of calculator in small height displays

--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
 
 body {
   background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
-  height: 100vh;
+  min-height: 100vh;
+  padding: 2rem 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,7 +16,7 @@ body {
 
 .calculator {
   width: 400px;
-  height: 650px;
+  height: 600px;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.178);
@@ -49,7 +50,6 @@ body {
 .btns {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(5, 1fr);
   height: 75%;
 }
 
